Jenkinsfile - added monitoring and container logs
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>